# full_coverage_path_planner

./: .gitignore  CMakeLists.txt  README.md  bitbucket-pipelines.yml  fcpp_plugin.xml  fcpp_spiral_plugin.xml  package.xml
.github/workflows/: main.yml
doc/: robot_plus_tool.ipe
examples/: move_base.launch  turtlebot_in_stage.launch
include/full_coverage_path_planner/: boustrophedon_stc.h  common.h  common.hpp  curve_generator.hpp  full_coverage_path_planner.h  full_coverage_path_planner.hpp  spiral_stc.h  spiral_stc.hpp
maps/: basement.yaml  grid.yaml  square.yaml
nodes/: coverage_progress
src/: boustrophedon_stc.cpp  common.cpp  curve_generator.cpp  full_coverage_path_planner.cpp  spiral_stc.cpp
src/full_coverage_path_planner/: stroke_joins.py
test/: README.md  simple_goal.yaml
test/full_coverage_path_planner/: fcpp.rviz  move_base_sim.launch  test_full_coverage_path_planner.launch  test_full_coverage_path_planner.test  test_full_coverage_path_planner_plugin.launch  test_full_coverage_path_planner_system.py
test/full_coverage_path_planner/param/: controllers.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  planners.yaml
test/include/full_coverage_path_planner/: util.h
test/src/: test_boustrophedon_stc.cpp  test_common.cpp  test_spiral_stc.cpp  util.cpp
